# swapsys

./: .gitattributes  LICENCE  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
src/: __init__.py  swapsys.py
src/swapsys.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
swap-env/: pyvenv.cfg
swap-env/Scripts/: activate  activate.bat
